# AS3935-ESP32

./: .gitignore  ADVANCED_SETTINGS_INFO_UPDATES.md  AFE_DISPLAY_FIX.md  ALL_HANDLERS_FIXED.md  API_REFERENCE.md  AS3935_ADVANCED_SETTINGS_QUICK.md  AS3935_REGISTER_API.md  AS3935_REGISTER_CONFIGURATION.md  BUILD_AFTER_REFACTORING.md  BUILD_AND_FLASH_REQUIRED.md  BUILD_AND_TEST.md  BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_FINAL.md  CHANGES_TODAY.md  CHEAT_SHEET.md  CMakeLists.txt  COMPLETE_FIX_SUMMARY.md  CONSOLE_ERROR_FIXES.md  DEBUG_FIXES_SUMMARY.md  DISTURBER_COMPLETE_SOLUTION.md  DISTURBER_CRASH_ROOT_CAUSE_FIX.md  DISTURBER_ENDPOINT_FIX.md  DISTURBER_FIX_QUICK_REF.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_MAP.md  FIXES_REPORT.md  FIX_SUMMARY.md  GETTING_STARTED.md  HARDWARE.md  I2C_ADDRESS_CONFIGURATION.md  I2C_ADDRESS_QUICK_START.md  I2C_PINOUT_GUIDE.md  INFO_BUTTON_ERROR_HANDLING.md  INFO_BUTTON_FIX.md  INTERRUPT_LOGGING_GUIDE.md  LIBRARY_FUNCTIONS_ONLY.md  LIVE_STATUS_DISPLAY.md  LIVE_STATUS_VISUAL.md  MUTEX_FIX_SUMMARY.md  QUICK_REFERENCE.md  (+23 more)
components/main/: CMakeLists.txt  app_main.c  as3935.c  as3935_adapter.c  events.c  http_helpers.c  mqtt_client.c  ota.c  settings.c  web_files.c  web_index.h  wifi_prov.c
components/main/include/: app_mqtt.h  as3935.h  as3935_adapter.h  events.h  http_helpers.h  mqtt_client.h  ota.h  settings.h  wifi_prov.h
components/main/test/: test_validate.c
components/main/web/: index.html
docs/: AS3935_CONFIGURATION.md  BUILD.md  CONSOLE_UART_CONFLICT_FIX.md  ESP-IDF-V6-QUIRKS-FIXES.md  MQTT_CONNECTION_STATE_FIX.md  SPA.md  (+4 more)
(+29 files in other folders)
